--- a/resources/style/theme.css
+++ b/resources/style/theme.css
@@ -1,32 +1,39 @@
 /*LOG_IN and REGISTRATION START*/
 
+@import url("color.css");
+
+
 .background {
-    background-color: #171722;
+    background-color: #000000;
 }
 
 .auth_main_box {
-    background: #212130;
+    border: none;
+    box-shadow: 0 0 10px 0 #fff, 0 0 20px 0 @my-main-color, 0 0 30px 0 @my-main-color, 0 0 40px @my-main-color, 0 0 70px @my-main-color, 0 0 80px @my-main-color, 0 0 100px @my-main-color;
+    filter: brightness(150%);
     border-radius: 20px;
 }
 
 .auth_entry_field {
-    background: #434461;
+    background: #000000;
+
+    filter: brightness(150%);
     border-radius: 60px;
     border-style: solid;
-    border-color: #434461;
+    border-color: #ffffff;
     outline: none;
     font-family: 'JetBrains Mono';
     font-style: normal;
     font-weight: 400;
     font-size: 20px;
     line-height: 26px;
-    color: #6E78A8;
+    color: #ffffff;
     transition: all 0.3s cubic-bezier(0.19, 1, 0.22, 1);
     box-shadow: 0px 0px 20px -18px;
 }
 
 .auth_entry_field:hover {
-    border: 2px solid #6E78A8;
+    border: 2px solid @my-main-color;
     box-shadow: 0px 0px 20px -17px;
 }
 
@@ -35,7 +42,7 @@
 }
 
 .auth_entry_field:focus {
-    border: 2px solid #7AA2F7;
+    border: 2px solid @my-main-color;
 }
 
 .auth_welcome_to_the_dark {
@@ -44,33 +51,41 @@
     font-weight: 400;
     font-size: 30px;
     line-height: 40px;
-    color: #B1BAE6;
+    color: #ffffff;
+    text-shadow: 0 0 10px @my-main-color, 0 0 20px @my-main-color, 0 0 30px @my-main-color, 0 0 40px @my-main-color, 0 0 70px @my-main-color, 0 0 80px @my-main-color, 0 0 100px @my-main-color;
+    filter: brightness(150%);
 }
 
 .auth_button {
-    background: #13131A;
+    color: #fff;
+    /*text-shadow: 0 0 10px #0ff, 0 0 20px #0ff, 0 0 30px #0ff, 0 0 40px #0ff, 0 0 70px #0ff, 0 0 80px #0ff, 0 0 100px #0ff;*/
+    /*filter: brightness(150%);*/
+
+    background: #000000;
     border-radius: 60px;
     outline: none;
+
+
     font-family: 'JetBrains Mono';
     font-style: normal;
     font-weight: 400;
     font-size: 20px;
     line-height: 26px;
-    color: #B1BAE6;
-    transition: all 0.3s ease-in-out;
+    /*transition: all 0.3s ease;*/
     outline-color: transparent;
     border-color: transparent;
     box-shadow: none;
 }
 
 .auth_button:hover {
-    transform: translateY(-4px) translateX(-2px);
-    box-shadow: 2px 5px 0 0 #565F89;
+    border-bottom: 2px solid @my-main-color;
+    box-shadow: 0px 2px 10px @my-main-color, 0px 2px 20px @my-main-color, 0px 2px 30px @my-main-color, 0px 2px 40px @my-main-color;
+    filter: brightness(150%);
+
 }
 
 .auth_button:active {
-    transform: translateY(2px) translateX(1px);
-    box-shadow: 0 0 0 0 #565F89;
+    box-shadow: 0 0 0 0 @my-main-color;
 }
 
 .auth_dont_or_have_account {
@@ -79,7 +94,7 @@
     font-weight: 400;
     font-size: 15px;
     line-height: 20px;
-    color: #B1BAE6;
+    color: #ffffff;
 }
 
 .auth_sign_button {
@@ -88,7 +103,9 @@
     font-weight: 400;
     font-size: 15px;
     line-height: 20px;
-    color: #565F89;
+
+    color: #fff;
+
     border-color: transparent;
     background: transparent;
     text-decoration-line: underline;
@@ -100,16 +117,14 @@
 .auth_sign_button:hover {
     border-color: transparent;
     background: transparent;
-    text-decoration-line: underline;
-    color: #0269A4;
+    /*text-decoration-line: underline;*/
+    color: @my-main-color;
     outline-color: transparent;
     border-color: transparent;
     box-shadow: none;
 }
 
 /*LOG_IN and REGISTRATION START*/
-
-
 
 /*HOME START*/
 .home {
@@ -120,8 +135,6 @@
 }
 
 /*HOME END*/
-
-
 
 /*LEFT MENU BAR START*/
 .left_menu_bar {
@@ -446,9 +459,9 @@
 
 .lets_start:hover {
     box-shadow: 0 0 5px #6582C8,
-        0 0 25px #647295,
-        0 0 50px #6582C8,
-        0 0 100px #647295;
+    0 0 25px #647295,
+    0 0 50px #6582C8,
+    0 0 100px #647295;
 }
 
 .lets_start:active {
@@ -605,16 +618,16 @@
     border-radius: 15px;
     transform: translateY(-10px);
     box-shadow: 0 15px 0 -4px #39a2db,
-        0 16px 10px -3px #39a2db,
-        0 7px 0 -2px #EEEEFF;
+    0 16px 10px -3px #39a2db,
+    0 7px 0 -2px #EEEEFF;
 }
 
 .achievements_label_btn:active {
     transition: all 0.2s;
     transform: translateY(-5px);
     box-shadow: 0 2px 0 -2px #EEEEFF,
-        0 8px 0 -4px #39a2db,
-        0 12px 10px -3px #39a2db;
+    0 8px 0 -4px #39a2db,
+    0 12px 10px -3px #39a2db;
 }
 
 .first_hbox {
